# stock-analysis

./: main.py  pyproject.toml
backend/: LICENSE  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
